Bug 178055 - CustomElementRegistry.define was throwing a JavaScript syntax error instead of a DOM syntax error
Summary: CustomElementRegistry.define was throwing a JavaScript syntax error instead o...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Darin Adler
URL:
Keywords: InRadar
Depends on:
Blocks: 154907
  Show dependency treegraph
 
Reported: 2017-10-07 17:33 PDT by Darin Adler
Modified: 2017-10-08 15:06 PDT (History)
5 users (show)

See Also:


Attachments
Patch (24.51 KB, patch)
2017-10-07 17:39 PDT, Darin Adler
no flags Details | Formatted Diff | Diff
Patch (24.35 KB, patch)
2017-10-07 18:39 PDT, Darin Adler
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Darin Adler 2017-10-07 17:33:34 PDT
CustomElementRegistry.define was throwing a JavaScript syntax error instead of a DOM syntax error
Comment 1 Darin Adler 2017-10-07 17:39:04 PDT
Created attachment 323107 [details]
Patch
Comment 2 Darin Adler 2017-10-07 18:39:48 PDT
Created attachment 323112 [details]
Patch
Comment 3 WebKit Commit Bot 2017-10-08 10:18:33 PDT
Comment on attachment 323112 [details]
Patch

Clearing flags on attachment: 323112

Committed r223032: <http://trac.webkit.org/changeset/223032>
Comment 4 WebKit Commit Bot 2017-10-08 10:18:34 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Radar WebKit Bug Importer 2017-10-08 10:19:47 PDT
<rdar://problem/34876055>