CustomElementRegistry.define was throwing a JavaScript syntax error instead of a DOM syntax error https://bugs.webkit.org/show_bug.cgi?id=178055

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/custom-elements/custom-element-registry/define-expected.txt:
Updated to expect more tests to pass.

Source/WebCore:

Both the JavaScript language and the DOM have "syntax error" exceptions, but
they are not the same thing.

Also, since the time a while back where we moved JavaScript error handling to
use WebCore::Exception and WebCore::ExceptionOr, there are a number of functions
that are no longer used and can be deleted.

* bindings/js/JSCustomElementRegistryCustom.cpp:
(WebCore::validateCustomElementNameAndThrowIfNeeded): Call throwDOMSyntaxError
instead of throwSyntaxError.

* bindings/js/JSDOMExceptionHandling.cpp:
(WebCore::reportDeprecatedGetterError): Deleted. Unused.
(WebCore::reportDeprecatedSetterError): Deleted. Unused.
(WebCore::throwNotSupportedError): Deleted the overload without an error message,
since it's unused. Changed the other overload to take an ASCIILiteral, since
that is what all the callers need.
(WebCore::throwInvalidStateError): Take ASCIILiteral as above.
(WebCore::throwArrayElementTypeError): Deleted. Unused.
(WebCore::throwDOMSyntaxError): Added an ASCIILiteral message argument. This
function was unused; it's now being used above, always with a literal message.
(WebCore::throwIndexSizeError): Deleted. Unused.
(WebCore::throwTypeMismatchError): Deleted. Unused.
* bindings/js/JSDOMExceptionHandling.h: Updated for the changes above.

* bindings/js/JSHTMLElementCustom.cpp:
(WebCore::constructJSHTMLElement): Fixed a typo in the error message.


Canonical link: https://commits.webkit.org/194303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223032 268f45cc-cd09-0410-ab3c-d52691b4dbfc